Alignment fixes

--- a/root/static/css/userpages/UserPage.scss
+++ b/root/static/css/userpages/UserPage.scss
@@ -217,7 +217,7 @@ section {
     &.full {
 	float: left;
 	margin-left: 20px;
-	text-align: center;
+	text-align: right;
 	}
     &.live {
 	border-color: $green-40;
